pocs/kust/apps/base/dummy-go/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-go
  namespace: dummy-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-go
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: dummy-go
    spec:
      containers:
      - name: dummy-go
        image: private-docker-registry.local-services.svc.cluster.local:30050/dummy-go:b11.20230711.165706 # {"$imagepolicy": "dummy-go:dummy-go"}
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: image-registry-credentials
