pocs/kust/apps/base/dummy-go/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: dummy-go
  namespace: dummy-go
spec:
  ingressClassName: nginx
